# Cabinet

./: .codegraphignore  .dockerignore  .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc  2026-05-02-foundation-layer.md  AUDIT_REPORT.md  AUDIT_REPORT_V3.md  CABINET.md  CHANGELOG.md  CONTRIBUTING.md  CYBERNETIC_AUDIT.md  DESIGN.md  Dockerfile  Document.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V10.md  IMPLEMENTATION_PLAN_V11.md  IMPLEMENTATION_PLAN_V12.md  IMPLEMENTATION_PLAN_V13.md  IMPLEMENTATION_PLAN_V14.md  IMPLEMENTATION_PLAN_V15.md  IMPLEMENTATION_PLAN_V4.md  IMPLEMENTATION_PLAN_V5.md  IMPLEMENTATION_PLAN_V6.md  IMPLEMENTATION_PLAN_V7.md  IMPLEMENTATION_PLAN_V8.md  IMPLEMENTATION_PLAN_V9.md  LICENSE  PHASE_1_3_AUDIT.md  README.md  README_CN.md  curator_deps_original.txt  docker-compose.yml  document.md  eslint.config.mjs  package.json  pnpm-lock.yaml  (+8 more)
.changeset/: README.md  config.json  initial-alpha-release.md  pre.json
.claude/: settings.json  settings.local.json
.codegraph/: daemon.pid
.husky/: pre-commit
apps/desktop/src-tauri/: BUILD_SETUP.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns  icon_rgba.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs  pty.rs
cabinet-v3/: CABINET.md
data/: .master_key  cabinet.json
data_stub_test/: .master_key  cabinet.json  models.json
deliverables/: animation-demos.html  cabinet-v3-architecture-final.md  cabinet-v3-architecture.md  orb-transition-demos.html  phase-4-implementation-plan.md  v2.0-improvement-plan.md
docs/: adp-analysis.md  agent-capability-comparison.md  blueprint-el-reference.md  design-project-init.md  design-secretary-orb.md  design-subagent-interaction.md  external-agent-api.md  external-agent-guide.md  external-agent-implementation-plan.md  external-agent-integration-v3.md  frontend-backend-audit-2026-06-26.md  frontend-external-agent-design.md  implementation-plan-final.md  perf-baseline-2026-05-07.md  plan-shadcn-migration.md  signing-guide.md  system-audit-2026-06-23.md
examples/: _shared.py  api_examples.ps1  api_examples.py  api_examples.sh  e2e_config.json  e2e_workflow.py  tutorial.py
preview/: cyberpunk-proposal.html  index.html  p-bauhaus.html  p-glassmorphism.html  p-neumorphism.html  p-solarpunk.html  p-y2k.html  themes.css  warm-proposal.html
reports/: 20260525 AIHOT.html  cabinet-claude-code-comparison.md  cabinet-code-audit-report.md  cabinet-code-review-report-20260604.md  cabinet-fix-plan.md  cabinet-functional-audit-report.md  cabinet-marketplace-plan.md  cabinet-opencode-comparison.md  cabinet-v3-claw-code-comparison.md  optimization-plan-assessment.md  writegate-slowpath-analysis.md
scripts/: empty-catch-files.txt  fix-empty-catches.mjs  publish.sh  (+1 more)
(+1118 files in other folders)
