[project]
name = "cabinet"
version = "0.1.0"
description = "An open-source AI collaboration framework for super-individuals and one-person companies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Cabinet Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Typing :: Typed",
]
keywords = ["ai", "agent", "collaboration", "llm", "framework"]
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.81.1",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "mcp>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "cryptography>=42.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.30"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/user/cabinet"
Documentation = "https://github.com/user/cabinet#readme"
Repository = "https://github.com/user/cabinet"
Issues = "https://github.com/user/cabinet/issues"

[project.scripts]
cabinet = "cabinet.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cabinet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests",
    "integration: tests requiring database/files",
    "slow: tests taking more than 1 second",
]

[tool.ruff]
line-length = 100
target-version = "py312"
