[package]
name = "cabinet"
version = "2.0.0"
description = "AI Collaboration Framework for super individuals"
authors = ["Captain"]
edition = "2021"

[lib]
name = "cabinet_lib"
crate-type = ["lib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
